--- a/css/responsive.css
+++ b/css/responsive.css
@@ -263,11 +263,14 @@
         width: auto;
         text-align: left;
     }
-    .md-block {
-        display: block;
+    .flex-block-md {
+        display: block !important;
     }
     .md-center-btn {
         margin: 0 auto;
+    }
+    .banner-edit-line {
+        text-align: center;
     }
 }
 
