--- a/css/styles.css
+++ b/css/styles.css
@@ -1374,7 +1374,7 @@ input.search-input:focus {
     font-size: 25px;
     line-height: 34px;
     text-align: right;
-    color: #257717;
+    color: #000000;
     display: block;
 }
 .checkbox-in-form {
@@ -1577,3 +1577,35 @@ input.search-input:focus {
     line-height: 22px;
     font-weight: 400;
  }
+ .card-input-bar {
+    height: 46px;
+    background-color: #fff;
+    padding-left: 35px;
+    box-shadow: 0px 1px 0px #ADADAD;
+    position: relative;
+ }
+ .input-card-symbol {
+     display: block;
+     line-height: 46px;
+     font-size: 20px;
+     position: absolute;
+     left: 12px;
+     top: 0;
+     height: 46px;
+ }
+ .card-input-fields {
+     box-shadow: none;
+     float: left;
+     background:none;
+     width: auto;
+ }
+.card-input-fields[type="text"]:focus,
+.card-input-fields[type="text"].active {
+    box-shadow: none;
+}
+.width-p-50 {
+    width: 50%;
+}
+.width-p-25 {
+    width: 25%;
+}
