--- a/css/styles.css
+++ b/css/styles.css
@@ -1148,7 +1148,7 @@ footer {
     height: 60px;
     line-height: 60px;
     font-size: 24px;
-    color: #378B03;
+    color: #000000;
 }
 .light-green-section {
     background: rgba(221, 247, 255, 0.25);
